# qml_torch

./: .gitignore  Dockerfile  HOWTOBUILDIT.md  Makefile  PHASE0.md  QMLTORCH.md  README.md  howto.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
LOGS.md/: template.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  ROADMAP.md
src/qmltorch/: __init__.py  core.py
