[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "qmltorch"
version = "0.1.0"
description = "Hybrid quantum + classical ML toolkit"
readme = "QMLTORCH.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
dependencies = [
"torch>=2.2",
"scikit-learn>=1.3",
"pennylane>=0.35",
"qiskit-terra>=0.25",
]


[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.5", "mypy>=1.8", "pre-commit>=3.7"]


[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]